--- a/Work_Class/proyectoPrueba/SPA/package.json
+++ b/Work_Class/proyectoPrueba/SPA/package.json
@@ -6,7 +6,9 @@
     "build": "vite build",
     "preview": "vite preview"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vite-plugin-gh-pages": "^1.0.1"
+  },
   "devDependencies": {
     "vite": "^5.0.0"
   }
